[package]
name = "jamo_eraser"
version = "0.1.0"
edition = "2021"

[dependencies]
windows-sys = { version = "0.59.0", features = [
    "Win32_Foundation",
	"Win32_System_Ole",
    "Win32_System_Memory",
    "Win32_System_DataExchange",            # ← clipboard APIs live here
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }
unicode-normalization = "0.1"
once_cell = "1.17"
